# not a GNU package. You can remove this line, if
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 1.4

SUBDIRS = src

pixmapsdir = @datadir@/critterding/pixmaps
pixmaps_DATA = share/critterding/pixmaps/cd.bmp

fontsdir = @datadir@/critterding/
fonts_DATA = share/critterding/font.ttf
