AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(bengine, 0.1)

AC_LANG_CPLUSPLUS
AC_PROG_CXX
AM_PROG_LIBTOOL

AC_MSG_CHECKING([host type])
case "$host" in
	*-apple-darwin*)
		HOST_LIBS="-lz"
		HOST_GL_LIBS="-framework OpenGL"
		HOST_SDL_LIBS="-framework SDL -framework Cocoa"
		SDLMAIN="SDLMain.o"
		OS=OSX
                AC_MSG_RESULT(OS X)
		AC_DEFINE_UNQUOTED(_OSX, 1, [Define this if you're building for native OS X])
     		m4_ifdef(
			[AC_PROG_OBJC],
       			[AC_PROG_OBJC],
			[AC_CHECK_TOOL([OBJC], [gcc])
			AC_SUBST(OBJC)
			AC_SUBST(OBJCFLAGS)]
		)
		;;
		
        *-*-mingw*)
                HOST_LIBS="-lmingw32 -lopengl32 -lfreetype -lSDLmain -lSDL -mwindows"
		SDLMAIN=""
		OS=WIN32
                AC_MSG_RESULT(win32)
                ;;
        *)
                HOST_LIBS="-lGL -lfreetype -lSDL"
		SDLMAIN=""
                AC_MSG_RESULT(generic unix)
		OS=UNIX
                ;;
esac

AM_CONDITIONAL([am__fastdepOBJC], false)

AC_SUBST(OS)
AC_SUBST(HOST_LIBS)
AC_SUBST(SDLMAIN)

dnl AC_DEFINE(OS, $OS, [Operating System])

AC_OUTPUT(Makefile src/Makefile src/brainz/Makefile \
				src/math/Makefile \
				src/gl/Makefile \
				src/scenes/Makefile \
				src/scenes/entities/Makefile \
				src/gui/Makefile \
				src/scenes/modes/Makefile \
				src/utils/Makefile \
				src/utils/ftgl/Makefile \
				src/utils/bullet/Makefile \
)
