INCLUDES = $(all_includes) -I../../utils/bullet 
METASOURCES = AUTO
noinst_LTLIBRARIES = libentities.la
noinst_HEADERS = 	camera.h \
			entity.h \
			critterb.h \
			food.h \
			archbodypart.h \
			archconstraint.h \
			archmouth.h \
			bodypart.h \
			constraint.h \
			mouth.h \
			body.h \
			wall.h \
			worldb.h

libentities_la_SOURCES =camera.cpp \
			entity.cpp \
			critterb.cpp \
			food.cpp \
			archbodypart.cpp \
			archconstraint.cpp \
			archmouth.cpp \
			bodypart.cpp \
			constraint.cpp \
			mouth.cpp \
			body.cpp \
			wall.cpp \
			worldb.cpp
