INCLUDES = $(all_includes) -I../../utils/bullet -fopenmp
METASOURCES = AUTO
noinst_LTLIBRARIES = libentities.la
noinst_HEADERS = 	camera.h \
			entity.h \
			genotype.h \
			genotypes.h \
			critterb.h \
			food.h \
			archbodypart.h \
			archconstraint.h \
			archmouth.h \
			bodypart.h \
			constraint.h \
			mouth.h \
			bodyarch.h \
			body.h \
			wall.h \
			worldb.h

libentities_la_SOURCES =camera.cpp \
			entity.cpp \
			genotype.cpp \
			genotypes.cpp \
			critterb.cpp \
			food.cpp \
			archbodypart.cpp \
			archconstraint.cpp \
			archmouth.cpp \
			bodypart.cpp \
			constraint.cpp \
			mouth.cpp \
			bodyarch.cpp \
			body.cpp \
			wall.cpp \
			worldb.cpp
